--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -32,7 +32,6 @@
   align-items: center;
   color: var(--hero-title);
   display: flex;
-  flex-direction: column;
   justify-content: center;
   min-height: 100vh;
   position: relative;
